# GAMBOL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  INFRA.md  NEXT_ACTIONS.md  NEXT_ACTIONS_BACCARAT.md  README.md  banluck_PRD_v1.1.md  banluck_PRD_v1.2.md  banluck_PRD_v1.3.md  banluck_findings.md
.claude/: gsd-file-manifest.json
.claude/skills/banluck-phase3/: SKILL.md
.github/workflows/: ci.yml
archive/: banluck_PRD_v1.1.md
banluck-solver/: .bandit  Banluck-solver summary.txt  app.py  pyproject.toml  requirements.txt
banluck-solver/src/analysis/: bankroll.py  heat_maps.py  plotly_lookup.py  simulator.py  strategy_report.py
banluck-solver/src/engine/: cards.py  deck.py  game_state.py  hand.py  rules.py  special_hands.py
banluck-solver/src/solvers/: baseline_dp.py  cfr.py  information_sets.py
banluck-solver/tests/: conftest.py  test_app.py  test_bankroll.py  test_baseline_dp.py  test_cards.py  test_cfr.py  test_deck.py  test_edge_cases.py  test_hand.py  test_heat_maps.py  test_information_sets.py  test_plotly_lookup.py  test_rules.py  test_simulator.py  test_special_hands.py  test_strategy_report.py
thai-baccarat-solver/: pyproject.toml  requirements.txt
thai-baccarat-solver/docs/: pok_deng_rules.md
