[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "thai-baccarat-solver"
version = "0.1.0"
description = "Game-theoretically optimal strategy solver for Pok Deng (Thai Baccarat)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions (cleaner comprehensions)
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # allow broad patterns in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
